Fix slow response when clicking on mobile 3

--- a/style.css
+++ b/style.css
@@ -17,6 +17,8 @@
 
 html {
   font-size: 62.5%;
+  -ms-touch-action: manipulation;
+  touch-action: manipulation;
 }
 
 body {
